tests/codegen/fail/interface/trait/missing_field.stderr
error[E0080]: evaluation panicked: Failed to implement interface `Character` on `ObjA`: field `id` isn't implemented on `ObjA`
  --> fail/interface/trait/missing_field.rs:11:8
   |
11 |     fn id(&self) -> &str;
   |        ^^ evaluation of `<CharacterValueEnum<ObjA> as juniper::macros::reflect::Field<__S, id>>::call::_::IMPL_ARGS::{constant#0}` failed here
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::juniper::assert_field` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation panicked: Failed to implement interface `Character` on `ObjA`: field `id` isn't implemented on `ObjA`
  --> fail/interface/trait/missing_field.rs:11:8
   |
11 |     fn id(&self) -> &str;
   |        ^^ evaluation of `<CharacterValueEnum<ObjA> as juniper::macros::reflect::Field<__S, id>>::call::_::IMPL_RETURN_TY::{constant#0}` failed here
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::juniper::assert_field` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation panicked: Failed to implement interface `Character` on `ObjA`: field `id` isn't implemented on `ObjA`
  --> fail/interface/trait/missing_field.rs:11:8
   |
11 |     fn id(&self) -> &str;
   |        ^^ evaluation of `<CharacterValueEnum<ObjA> as juniper::macros::reflect::AsyncField<__S, id>>::call::_::IMPL_ARGS::{constant#0}` failed here
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::juniper::assert_field` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation panicked: Failed to implement interface `Character` on `ObjA`: field `id` isn't implemented on `ObjA`
  --> fail/interface/trait/missing_field.rs:11:8
   |
11 |     fn id(&self) -> &str;
   |        ^^ evaluation of `<CharacterValueEnum<ObjA> as juniper::macros::reflect::AsyncField<__S, id>>::call::_::IMPL_RETURN_TY::{constant#0}` failed here
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::juniper::assert_field` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ObjA: reflect::Field<__S, 11301463986558097276003903130001171064>` is not satisfied
  --> fail/interface/trait/missing_field.rs:11:8
   |
11 |     fn id(&self) -> &str;
   |        ^^ unsatisfied trait bound
   |
   = help: the trait `Field<__S, 11301463986558097276003903130001171064>` is not implemented for `ObjA`
           but trait `Field<__S, 140650918148392961738240285796466530725>` is implemented for it

error[E0080]: evaluation panicked: Failed to implement interface `Character` on `ObjA`: field `id` isn't implemented on `ObjA`
  --> fail/interface/trait/missing_field.rs:11:8
   |
11 |     fn id(&self) -> &str;
   |        ^^ evaluation of `<CharacterValueEnum<ObjA> as juniper::macros::reflect::Field<__S, id>>::call::_::IMPL_RETURN_WRAPPED_VAL::{constant#0}` failed here
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::juniper::assert_field` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ObjA: AsyncField<__S, 11301463986558097276003903130001171064>` is not satisfied
  --> fail/interface/trait/missing_field.rs:11:8
   |
11 |     fn id(&self) -> &str;
   |        ^^ unsatisfied trait bound
   |
   = help: the trait `AsyncField<__S, 11301463986558097276003903130001171064>` is not implemented for `ObjA`
           but trait `AsyncField<__S, 140650918148392961738240285796466530725>` is implemented for it

error[E0080]: evaluation panicked: Failed to implement interface `Character` on `ObjA`: field `id` isn't implemented on `ObjA`
  --> fail/interface/trait/missing_field.rs:11:8
   |
11 |     fn id(&self) -> &str;
   |        ^^ evaluation of `<CharacterValueEnum<ObjA> as juniper::macros::reflect::AsyncField<__S, id>>::call::_::IMPL_RETURN_WRAPPED_VAL::{constant#0}` failed here
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::juniper::assert_field` (in Nightly builds, run with -Z macro-backtrace for more info)
